--- a/htmlcss-task-5/index.html
+++ b/htmlcss-task-5/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="header-top">
+    <div class="top-header">
       <section class="logo">
-        <a>LOGO</a>
+        <h1>LOGO</h1>
       </section>
       <section class="search">
-        <span>Блок поиска</span>
+        <h2>Блок поиска</h2>
       </section>
     </div>
     <nav class="nav-block">
@@ -42,21 +42,21 @@
   </header>
   <main class="main-page">
     <aside class="sidebar">
-      <ul>
-        <li>
-          <a href="#">Блок 1</a>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Блок 1</a>
         </li>
-        <li>
-          <a href="#">Блок 2</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Блок 2</a>
         </li>
-        <li>
-          <a href="#">Блок 3</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Блок 3</a>
         </li>
-        <li>
-          <a href="#">Блок 4</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Блок 4</a>
         </li>
-        <li>
-          <a href="#">Блок 5</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Блок 5</a>
         </li>
       </ul>
     </aside>
@@ -89,7 +89,7 @@
   </main>
   <footer class="main-footer">
     <section class="footer-content">
-      <span>Подвал</span>
+      <h2>Подвал</h2>
     </section>
   </footer>
 </body>
