--- a/htmlcss-task-7/index.html
+++ b/htmlcss-task-7/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="contact-item">
             <label class="contact-label" for="message">Текст письма:</label>
-            <textarea class="contact-input" name="message" placeholder="В свободной форме" id="message" rows="5" oninvalid="testInput()" required><textarea>
+            <textarea class="contact-input" name="message" placeholder="В свободной форме" id="message" rows="5" oninvalid="testInput()" required></textarea>
           </div>
           <input class="btn" id="btn" type="submit" name="btn" value="Отправить">
         </form>
