change slide height and block margin

--- a/htmlcss-task-9/index.html
+++ b/htmlcss-task-9/index.html
@@ -110,9 +110,9 @@
         </div>
       </div>
       <!-- 3 объекта реализующих функционал класса card -->
-      <div class="row">
+      <div class="row row-flex">
         <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="min-width: 18rem;">
             <img src="img/cat-new-1.jpg" class="card-img-top" alt="Толстый кот">
             <div class="card-body">
               <h5 class="card-title">Кошки толстеют от нашей любви</h5>
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="min-width: 18rem;">
             <img src="img/cat-new-2.jpg" class="card-img-top" alt="Модный кот">
             <div class="card-body">
               <h5 class="card-title">Кошки прошлись по подиуму в Нью-Йорке</h5>
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="min-width: 18rem;">
             <img src="img/cat-new-3.jpg" class="card-img-top" alt="Хмурый кот">
             <div class="card-body">
               <h5 class="card-title">Хмурый кот Джуно стал новой звездой соцсетей</h5>
