change code structure

--- a/htmlcss-task-12/index.html
+++ b/htmlcss-task-12/index.html
@@ -9,7 +9,7 @@
     <title>Поиск</title>
 </head>
 
-<body id="elem">
+<body>
     <!-- Хэдер -->
     <header class="main-header">
         <div class="container">
@@ -18,7 +18,7 @@
                     <!-- Строка поиска -->
                     <form class="form-inline" id="search-value">
                         <input class="form-control mr-sm-2" id="search-item" name="n" type="text" placeholder="Пиши тут..." aria-label="Пиши тут...">
-                        <button class="btn btn-outline-success my-2 my-sm-0" id="search" type="button" onclick="searchHundler()">Поиск</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" id="btn" type="button">Поиск</button>
                     </form>
                 </div>
             </div>
